--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "csurf": "^1.9.0",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.4.16",
